--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
 	</header>
 
 <section class="main_box" >
-<div class="main_bg" data-parallax="scroll" data-speed="0.2" data-image-src="img/bg_main3.jpg" style="     height: 100vh;
-    max-height: 900px; " >
+<div class="main_bg" data-parallax="scroll" data-speed="0.2" data-image-src="img/bg_main3.jpg" >
 
     <div class="white_bg">
     	</div>
