--- a/index.html
+++ b/index.html
@@ -483,19 +483,24 @@
 	<div class="white_bg_2">
     	</div>
 <div class="container">
-	<div class="col-lg-12">
-		<div class="row">
+
 			
 
-			<h2 >Контакты</h2>
+	
 
-
-
-
+	<div class=" contacts_a" >
+	
+		<h2 >Контакты</h2>
+		<ul>
+				<li><p style="font-size: 21px;">(4822) 41-57-87</p></li>
+				<li><p style="font-size: 21px;">(964) 166-33-00</p></li>
+				<li><p>Тверь, ул. Скворцова-Степанова, 73/1</p></li>
+				<li><img src="img/place.jpg" alt=""></li>
+			</ul>
 
 
 		</div>
-	</div>
+
 </div>
 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A849374889ef9a8b2e4f6afc4aa4b8bd851832b7269d4bbf63e2e7949db34d460&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=false"></script>
 </section>
