--- a/index.html
+++ b/index.html
@@ -303,6 +303,53 @@
 </div>
 </section>
 
+
+<section class="news" data-parallax="scroll" data-speed="0.2" data-image-src="img/bg_main2.jpg">
+	<div class="white_bg_2">
+    	</div>
+<div class="container">
+	<div class="col-lg-12">
+		<div class="row">
+			
+			<div class="news_text" style=" text-align: center;">
+				<h2>Наши новости</h2>
+				<ul>
+					
+					<li class="news_item_1" >
+						<div class="news_shadow">
+						<div class="text">
+						<h3 >Новогодние КАНИКУЛЫ</h3>
+						<p>Пора уже подумать о планах на новогодние и рождественские деньки!</p>
+						</div>
+						</div>
+					</li>
+					<li class="news_item_2">
+						<div class="news_shadow">
+						<div class="text">
+						<h3 >Готовимся к Новому году</h3>
+						<p>Начинаем потихоньку украшать наше помещение</p>
+						</div>
+						</div>
+					</li>
+					<li class="news_item_3">
+						<div class="news_shadow">
+						<div class="text">
+						<h3 >Весёлые старты</h3>
+						<p>Играем, веселимся и смеемся</p>
+						</div>
+						</div>
+					</li>
+				</ul>
+
+
+
+				<!-- <p><a href="#">Больше фото</a></p> -->
+			</div>
+		</div>
+	</div>
+</div>
+</section>
+
 <section class="gallery" data-parallax="scroll" data-speed="0.2" data-image-src="img/bg_main2.jpg">
 	<div class="white_bg_2">
     	</div>
@@ -311,7 +358,7 @@
 		<div class="row">
 			
 			<div class="gallery_text" style=" text-align: center;">
-				<h2>Картинки</h2>
+				<h2>Фотогалерея</h2>
 				<ul>
 					<li><img src="img/dost.jpg" alt=""></li>
 					<li><img src="img/dost2.jpg" alt=""></li>
