--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
 
 
-				<p><a href="#">Все новости</a></p>
+				<p style="padding-bottom: 25px;"><a href="#">Все новости</a></p>
 			</div>
 		</div>
 	</div>
