--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<row>
 			<ul>
 				<li>
-					<p><a href=""></a></p>
+					<p><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="https://vk.com/club_mdetstva"><i class="fa fa-vk" aria-hidden="true"></i></a><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></p>
 				</li>
 				<li>
 					<p><a href="">Полезное</a></p>
@@ -205,8 +205,8 @@
 		<div class="row">
 			
 			<div class="food_text" >
-				<h2>Накормим</h2>
-				<p>Домашняя, вкусная еда.<br>Всегда вкусные и экологически чистые продукиы</p>
+				<h2>Занятия для дошкольников</h2>
+				<p>Подготовим вашего ребенка к школе<br></p>
 				<p><a href="#">Подробнее</a></p>
 			</div>
 		</div>
@@ -214,6 +214,25 @@
 </div>
 </div>
 </section>
+
+
+
+
+<!-- 
+Добавить Проведения Дней Рождения
+Добавить Проведения Дней Рождения
+Добавить Проведения Дней Рождения
+Добавить Проведения Дней Рождения
+Добавить Проведения Дней Рождения
+Добавить Проведения Дней Рождения
+Добавить Проведения Дней Рождения
+Добавить Проведения Дней Рождения
+ -->
+
+
+
+
+
 
 
 
@@ -541,7 +560,7 @@
 		<ul>
 				<li><p style="font-size: 21px;">(4822) 41-57-87</p></li>
 				<li><p style="font-size: 21px;">(964) 166-33-00</p></li>
-				<li><p>Тверь, ул. Скворцова-Степанова, 73/1</p></li>
+				<li><p>ул. Скворцова-Степанова, 85 1 этаж</p></li>
 				<li><img src="img/place.jpg" alt=""></li>
 			</ul>
 
@@ -558,10 +577,10 @@
 				
 <div class="container bottom">
 	<div class="row">
-		<div class="col-md-4 bottom_item">
+		<div class="col-md-3 bottom_item">
 			<img src="img/logo.jpg" alt="">
 		</div>
-		<div class="col-md-4 bottom_menu">
+		<div class="col-md-3 bottom_menu">
 			<ul>
 				<li>
 					<p><a href="">Трансфер</a></p>
@@ -589,15 +608,27 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-md-4 bottom_contact">
+		<div class="col-md-3 bottom_contact">
 			<h3>Контакты</h3>
 			<ul>
 				<li><p style="font-size: 21px;">(4822) 41-57-87</p></li>
 				<li><p style="font-size: 21px;">(964) 166-33-00</p></li>
-				<li><p>Тверь, ул. Скворцова-Степанова, 73/1</p></li>
 			</ul>
-			
-			
+		</div>
+
+		<div class="col-md-3 bottom_contact">
+			<div class="row">
+			<h3>Адрес</h3>
+			<ul>
+				<li><p style="font-size: 19px;">ул. Скворцова-Степанова, 85 1 этаж</p></li>
+			</ul>
+			</div>
+			<div class="row">
+				<h3>Мы в соц сетях</h3>
+			<div class="col-md-4"><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
+			<div class="col-md-4"><a href="https://vk.com/club_mdetstva"><i class="fa fa-vk" aria-hidden="true"></i></a></div>
+			<div class="col-md-4"><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+</div>
 			
 		</div>
 	</div>
