--- a/index.html
+++ b/index.html
@@ -231,7 +231,17 @@
 
 
 
-
+<!-- 
+Добавить точки зхвата
+Добавить точки зхвата
+Добавить точки зхвата
+Добавить точки зхвата
+Добавить точки зхвата
+Добавить точки зхвата
+Добавить точки зхвата
+Добавить точки зхвата
+Добавить точки зхвата
+ -->
 
 
 
