--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				
 				<h2>Доставим</h2>
 				<p>Вам не нужно стоять в пробках чтобы забрать вашего ребенка, мы это сделаем за вас.<br>Мы заберем вашего ребенка из школы или дома и отвезем на занятия</p>
-				<p><a href="#">Подробнее</a></p>
+				<p><a href="#tvor" class="popap">Подробнее</a></p>
 			</div>
 		</div>
 	</div>
@@ -207,7 +207,7 @@
 			<div class="food_text" >
 				<h2>Занятия для дошкольников</h2>
 				<p>Подготовим вашего ребенка к школе<br></p>
-				<p><a href="#">Подробнее</a></p>
+				<p><a href="#tvor" class="popap">Подробнее</a></p>
 			</div>
 		</div>
 	</div>
@@ -259,9 +259,7 @@
 			<div class="art_text">
 				<h2>Пространство для творчева</h2>
 				<p>Новый , полностью оборудованное помещение</p>
-				<P>
-					<a href="#">Подробнее</a>
-				</P>
+				<p><a href="#tvor" class="popap">Подробнее</a></p>
 			</div>
 		</div>
 	</div>
@@ -283,9 +281,7 @@
 				<h2>Дополнительные занятия, бассейн</h2>
 				<p>Бассейн под присмотром с профессиональных инструкторов</p>
 				
-				<P>
-					<a href="#">Подробнее</a>
-				</P>
+				<p><a href="#tvor" class="popap">Подробнее</a></p>
 			</div>
 		</div>
 	</div>
@@ -555,6 +551,39 @@
 </section>
 
 
+
+
+
+
+
+	<div class="hidden popUpform">
+		<div class="popap_page" id="tvor">
+	<div class="popap_img">
+		<img src="css/img/fun2.jpg" alt="">
+	</div>
+	
+	<h2>ДОПОЛНИТЕЛЬНЫЕ ЗАНЯТИЯ</h2>
+	<p>С нами не заскучаешь, у нас всегда есть чем удивить детей. Регулярно мы выезжаем на экскурсии, посещаем бассейн, проводим кулинарные масерклассЫ:</p>
+<ul >
+	<li>кулинарные мастерклассы</li>
+	<li>организация и проведение Дней Рождений</li>
+	<li>детский фитнес для детей 4-6 лет</li>
+	<li>бассейн</li>
+</ul>
+
+<p style="font-weight: 900;">Приходите на бесплатное первое посещение и убедитесь сами</p>
+
+<p><a href="">Записаться</a></p>
+
+	
+	</div></div>
+
+
+
+
+
+
+
 <section class="contacts" data-parallax="scroll" data-speed="0.2" data-image-src="img/bg_main2.jpg">
 	<div class="white_bg_2">
     	</div>
@@ -581,6 +610,8 @@
 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A849374889ef9a8b2e4f6afc4aa4b8bd851832b7269d4bbf63e2e7949db34d460&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=false"></script>
 </section>
 	
+
+
 
 
 	<footer >	
