--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
 	</div>
 	
 	<h2>ДОПОЛНИТЕЛЬНЫЕ ЗАНЯТИЯ</h2>
-	<p>С нами не заскучаешь, у нас всегда есть чем удивить детей. Регулярно мы выезжаем на экскурсии, посещаем бассейн, проводим кулинарные масерклассЫ:</p>
+	<p>С нами не заскучаешь, у нас всегда есть чем удивить детей. Мы регулярно выезжаем на экскурсии, посещаем бассейн, проводим кулинарные мастерклассЫ:</p>
 <ul >
 	<li>кулинарные мастерклассы</li>
 	<li>организация и проведение Дней Рождений</li>
@@ -571,7 +571,7 @@
 	<li>бассейн</li>
 </ul>
 
-<p style="font-weight: 900;">Приходите на бесплатное первое посещение и убедитесь сами</p>
+<p style="font-weight: 900;">Приходите на бесплатное, первое посещение и убедитесь сами</p>
 
 <p><a href="">Записаться</a></p>
 
