--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 		<div class="row">
 			
 			<div class="food_text" >
-				<h2>Подготовка домашнего задания</h2>
+				<h2>Подготовка <br>домашнего задания</h2>
 				<p>Самостоятельная работа и/или групповая с участием педагога<br></p>
 				<p><a href="#tvor" class="popap">Подробнее</a></p>
 			</div>
